--- a/SourceCode/2023/Sep2023/Projects/Sarath Chandra/REFWI5/Framework/InitAllApplications.xaml
+++ b/SourceCode/2023/Sep2023/Projects/Sarath Chandra/REFWI5/Framework/InitAllApplications.xaml
@@ -101,14 +101,14 @@
     <ui:LogMessage DisplayName="Log message (Initialize applications)" sap:VirtualizedContainerService.HintSize="388,141" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Trace" Message="[&quot;Opening applications...&quot;]" />
     <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="ACME login with assets.xaml - Invoke Workflow File" sap:VirtualizedContainerService.HintSize="388,113" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="ACME\ACME login with assets.xaml">
       <ui:InvokeWorkflowFile.Arguments>
-        <OutArgument x:TypeArguments="x:Boolean" x:Key="ACMEloggedin">
+        <OutArgument x:TypeArguments="x:Boolean" x:Key="out_ACMEloggedin">
           <VisualBasicReference x:TypeArguments="x:Boolean" ExpressionText="ACMEloggedin" />
         </OutArgument>
       </ui:InvokeWorkflowFile.Arguments>
     </ui:InvokeWorkflowFile>
     <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="SHA1\SHA1Open.xaml - Invoke Workflow File" sap:VirtualizedContainerService.HintSize="388,113" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" UnSafe="False" WorkflowFileName="SHA1\SHA1Open.xaml">
       <ui:InvokeWorkflowFile.Arguments>
-        <OutArgument x:TypeArguments="x:Boolean" x:Key="SHA1open">
+        <OutArgument x:TypeArguments="x:Boolean" x:Key="Out_SHA1open">
           <VisualBasicReference x:TypeArguments="x:Boolean" ExpressionText="SHA1open" />
         </OutArgument>
       </ui:InvokeWorkflowFile.Arguments>
