--- a/SourceCode/2023/Sep2023/Basics/Chandupriya/Task_5/Main.xaml
+++ b/SourceCode/2023/Sep2023/Basics/Chandupriya/Task_5/Main.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="Main" VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="850.4,813.6" sap2010:WorkflowViewState.IdRef="ActivityBuilder_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=System.Private.CoreLib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="Main" VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="850.4,878.4" sap2010:WorkflowViewState.IdRef="ActivityBuilder_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=System.Private.CoreLib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
       <x:String>System.Activities</x:String>
@@ -75,11 +75,11 @@
       <AssemblyReference>UiPath.System.Activities.ViewModels</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="Add two different Variable types and do the Add in final variable(by using Generic Variable type)" DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="496,748.8" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence sap2010:Annotation.AnnotationText="Add two different Variable types and do the Add in final variable(by using Generic Variable type)" DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="496,813.6" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
-      <Variable x:TypeArguments="ui:GenericValue" Name="Input_Str" />
-      <Variable x:TypeArguments="ui:GenericValue" Name="Input_Int" />
       <Variable x:TypeArguments="x:String" Name="Result" />
+      <Variable x:TypeArguments="ui:GenericValue" Name="String_Data" />
+      <Variable x:TypeArguments="ui:GenericValue" Name="Integer_Data" />
     </Sequence.Variables>
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -89,7 +89,7 @@
     </sap:WorkflowViewStateService.ViewState>
     <Assign sap2010:Annotation.AnnotationText="Created a String variable and Stored a value in it by using generic variable" DisplayName="Stored Str value" sap:VirtualizedContainerService.HintSize="433.6,112.8" sap2010:WorkflowViewState.IdRef="Assign_1">
       <Assign.To>
-        <OutArgument x:TypeArguments="ui:GenericValue">[Input_Str]</OutArgument>
+        <OutArgument x:TypeArguments="ui:GenericValue">[String_Data]</OutArgument>
       </Assign.To>
       <Assign.Value>
         <InArgument x:TypeArguments="ui:GenericValue">["Wonders of INDIA are "]</InArgument>
@@ -102,7 +102,7 @@
     </Assign>
     <Assign sap2010:Annotation.AnnotationText="Created a Integer variable and Stored a value in it by using generic variable" DisplayName="Stored Int value" sap:VirtualizedContainerService.HintSize="433.6,125.6" sap2010:WorkflowViewState.IdRef="Assign_2">
       <Assign.To>
-        <OutArgument x:TypeArguments="ui:GenericValue">[Input_Int]</OutArgument>
+        <OutArgument x:TypeArguments="ui:GenericValue">[Integer_Data]</OutArgument>
       </Assign.To>
       <Assign.Value>
         <InArgument x:TypeArguments="ui:GenericValue">[7]</InArgument>
@@ -118,7 +118,7 @@
         <OutArgument x:TypeArguments="x:String">[Result]</OutArgument>
       </Assign.To>
       <Assign.Value>
-        <InArgument x:TypeArguments="x:String">[Input_Str+Input_Int]</InArgument>
+        <InArgument x:TypeArguments="x:String">[String_Data+Integer_Data]</InArgument>
       </Assign.Value>
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -126,12 +126,12 @@
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
     </Assign>
-    <WriteLine sap2010:Annotation.AnnotationText="Displays the specific result in output panel" DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="433.6,121.6" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="[Result]">
+    <ui:LogMessage sap2010:Annotation.AnnotationText="Writes the specified message according to the log level" DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="433.6,186.4" sap2010:WorkflowViewState.IdRef="LogMessage_2" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[Result]">
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
-    </WriteLine>
+    </ui:LogMessage>
   </Sequence>
 </Activity>
