--- a/SourceCode/2023/Sep2023/Basics/Chandupriya/Task_5/Main.xaml
+++ b/SourceCode/2023/Sep2023/Basics/Chandupriya/Task_5/Main.xaml
@@ -78,8 +78,8 @@
   <Sequence sap2010:Annotation.AnnotationText="Add two different Variable types and do the Add in final variable(by using Generic Variable type)" DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="496,813.6" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:String" Name="Result" />
-      <Variable x:TypeArguments="ui:GenericValue" Name="String_Data" />
-      <Variable x:TypeArguments="ui:GenericValue" Name="Integer_Data" />
+      <Variable x:TypeArguments="ui:GenericValue" Name="dt_String" />
+      <Variable x:TypeArguments="ui:GenericValue" Name="dt_Integer" />
     </Sequence.Variables>
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -89,7 +89,7 @@
     </sap:WorkflowViewStateService.ViewState>
     <Assign sap2010:Annotation.AnnotationText="Created a String variable and Stored a value in it by using generic variable" DisplayName="Stored Str value" sap:VirtualizedContainerService.HintSize="433.6,112.8" sap2010:WorkflowViewState.IdRef="Assign_1">
       <Assign.To>
-        <OutArgument x:TypeArguments="ui:GenericValue">[String_Data]</OutArgument>
+        <OutArgument x:TypeArguments="ui:GenericValue">[dt_String]</OutArgument>
       </Assign.To>
       <Assign.Value>
         <InArgument x:TypeArguments="ui:GenericValue">["Wonders of INDIA are "]</InArgument>
@@ -102,7 +102,7 @@
     </Assign>
     <Assign sap2010:Annotation.AnnotationText="Created a Integer variable and Stored a value in it by using generic variable" DisplayName="Stored Int value" sap:VirtualizedContainerService.HintSize="433.6,125.6" sap2010:WorkflowViewState.IdRef="Assign_2">
       <Assign.To>
-        <OutArgument x:TypeArguments="ui:GenericValue">[Integer_Data]</OutArgument>
+        <OutArgument x:TypeArguments="ui:GenericValue">[dt_Integer]</OutArgument>
       </Assign.To>
       <Assign.Value>
         <InArgument x:TypeArguments="ui:GenericValue">[7]</InArgument>
@@ -118,7 +118,7 @@
         <OutArgument x:TypeArguments="x:String">[Result]</OutArgument>
       </Assign.To>
       <Assign.Value>
-        <InArgument x:TypeArguments="x:String">[String_Data+Integer_Data]</InArgument>
+        <InArgument x:TypeArguments="x:String">[dt_String+dt_Integer]</InArgument>
       </Assign.Value>
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
